base/monitoring/tools-server/heartbeats/networkpolicies/prometheus-egress-tools-server-heartbeats.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-egress-tools-server-heartbeats
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-prometheus-stack-prometheus
      app.kubernetes.io/name: prometheus
  egress:
    - toFQDNs:
        - matchName: tools.srv.${BASE_DOMAIN}
      toPorts:
        - ports:
            - port: "80" # heartbeats metrics
              protocol: TCP
            - port: "443" # heartbeats metrics
              protocol: TCP
